--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@ body {
 .container {
     height: 500px;
     width: 450px;
-    background-color: rgb(98, 131, 126);
+    background-color:antiquewhite;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 10px;
+    border-radius: 20px;
 }
 .container h2{
     margin-top: 1rem;
@@ -33,7 +34,7 @@ body {
 .box{
     height: 400px;
     width: 400px;
-    background-color: rgb(11, 117, 124);
+    /* background-color: rgb(11, 117, 124); */
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
@@ -41,6 +42,8 @@ body {
 .inner-box{
     height: 125px;
     width: 125px;
-    background-color: rgb(235, 149, 44);
+    background-color: rgb(255, 255, 255);
     margin: auto;
+    border: 1px solid black;
+    border-radius: 10px;
 }
